DE4477 - Title label on To and From transfer cells does not read "… Account Ending in XXXX". Updated the text and logic so that the title of these cells is updated when an account is selected. US7360 : TA14854 - Updated error labels for the recurring section of transfer money step one. Should now handle errors for duration values on recurring transfers.

--- a/Discover-Bank-Phone/res/values/strings_bank_transfers.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_transfers.xml
@@ -47,6 +47,8 @@
 	
 	
 	<!-- Error Labels -->
-	<string name="amount_less_than_twenty_five">Too low (less than $25)</string>
-	<string name="invalid_date">Please select a date</string>
+	<string name="select_accounts_error">Please select a To and From account to make a transfer.</string>
+	<string name="amount_less_than_twenty_five">Too low (less than $25).</string>
+	<string name="invalid_date">Please select a date.</string>
+	<string name="too_few_transfers">Enter the number of total transfers, must be greater than 1.</string>
 </resources>
