--- a/Discover-Bank-Phone/res/values/strings_atm_locator.xml
+++ b/Discover-Bank-Phone/res/values/strings_atm_locator.xml
@@ -3,8 +3,15 @@
     
     <!--  ATM locator strings -->
     <string name="atm_locator_title">ATM Locator</string>
-    <string name="atm_location_modal_title">Use Current Location</string>
-    <string name="atm_location_modal_content">By clicking the \"Allow\" button, you hereby agree that Discover may access and use your current location information to show you the nearest ATM.</string>
+    <string name="atm_location_modal_title">Discover ATM Locator</string>
+    <string name="atm_location_modal_content">
+        <![CDATA[This ATM Locator is intended for Discover Bank customers only. 
+					Discover Card customers should visit the <a href="http://www.discover.com/atm">ATM Locator</a>
+					to search for cash access locations.<br /><br />You will not be charged an ATM surcharge for cash withdrawals at ATMs with orange pins. 
+					For Discover Credit Card cash advances, your cash advance APR and cash advance fee will apply.<br /><br />
+					By clicking the \"Find an ATM\" button, you hereby agree that Discover may access and use your current location
+					information to show you the nearest ATM.]]>  
+    </string>
     <string name="atm_location_modal_allow">Allow</string>
     <string name="atm_location_modal_decline">Don\'t Allow</string>
     <string name="atm_location_modal_service_title">Turn On Location Services To Allow \"Discover\" To Determine Your Location</string>
