ID: DE4407 - Add Phone Numbers to Certain Modals (US7880) - Cosmetic defects in Locked Out modal ID: DE4469 - Help Icon - Have a caret in each subsection to show an action item ID: DE4415 - Add Phone Numbers to Certain Modals (US7880) - phone number links should not be bolded
Tested:
- Verified Phone Number hyper link is not bold in modals
- Verified caret to left of Card and Bank Faqs in help button drop down
- Error Icon is aligned with title text

--- a/Discover-Commons/res/layout/common_modal_default_top_view.xml
+++ b/Discover-Commons/res/layout/common_modal_default_top_view.xml
@@ -15,6 +15,7 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_alignTop="@+id/modal_alert_title"
+	        android:layout_marginTop="10dp"
 	        android:src="@drawable/error_icon_red" 
 	        android:visibility="gone"
 	        style="@style/modal_error_image"/>
@@ -24,7 +25,6 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_toRightOf="@+id/error_icon"
-	        android:paddingTop="5dp"
 	        style="@style/modal_title_text"/>
 	   	
 	    <TextView
