--- a/Discover-Commons/res/values/strings_help_menu.xml
+++ b/Discover-Commons/res/values/strings_help_menu.xml
@@ -3,6 +3,6 @@
     
     <string name="help_all_faq">All FAQs</string>
     <string name="help_menu_number">1-800-290-9885</string>
-    <string name="help_bank_faq">Bank FAQs</string>
-    <string name="help_card_faq">Card FAQs</string>
+    <string name="help_bank_faq">Bank FAQs ></string>
+    <string name="help_card_faq">Card FAQs ></string>
 </resources>
