ID: DE4407 - Add Phone Numbers to Certain Modals (US7880) - Cosmetic defects in Locked Out modal ID: DE4469 - Help Icon - Have a caret in each subsection to show an action item ID: DE4415 - Add Phone Numbers to Certain Modals (US7880) - phone number links should not be bolded
Note: This commit fixed some integration issues as well as style issues discovered after rebasing.

Tested:
- Verified Phone Number hyper link is not bold in modals
- Verified caret to left of Card and Bank Faqs in help button drop down
- Error Icon is aligned with title text

--- a/Discover-Commons/res/values/styles.xml
+++ b/Discover-Commons/res/values/styles.xml
@@ -62,17 +62,23 @@
     </style>
     
     <!--  Blue Hyperlink styles -->
-    <style name="common_blue_hyperlink">
+    <style name="blue_hyperlink">
+        <item name="android:textColor">@color/blue_link</item>
+        <item name="android:textSize">@dimen/body_copy_min</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    
+    <style name="normal_blue_hyperlink">
         <item name="android:textColor">@color/blue_link</item>
         <item name="android:textSize">@dimen/body_copy_min</item>
         <item name="android:textStyle">normal</item>
     </style>
 
-    <style name="blue_hyperlink_small" parent="common_blue_hyperlink">
+    <style name="blue_hyperlink_small" parent="blue_hyperlink">
         <item name="android:textSize">@dimen/small_copy_max</item>
     </style>
     
-    <style name="blue_hyperlink_extra_small"  parent="common_blue_hyperlink">
+    <style name="blue_hyperlink_extra_small"  parent="blue_hyperlink">
         <item name="android:textSize">12sp</item>
     </style>
     
