DE4483 - Transfer Funds Dollar Amount gets cut off. Updated the text on this screen so that it matches the size of text that iOS is using.

--- a/Discover-Bank-Phone/res/layout/adjusted_formatted_amount_list_item.xml
+++ b/Discover-Bank-Phone/res/layout/adjusted_formatted_amount_list_item.xml
@@ -38,8 +38,7 @@
             android:layout_weight="1"
             android:gravity="right"
             android:paddingRight="3dp"
-            android:text="@string/bank_dollar_sign"
-            android:textColor="@color/black" />
+            android:text="@string/bank_dollar_sign" />
 
         <com.discover.mobile.bank.ui.widgets.AmountValidatedEditField
             android:id="@+id/amount_edit"
