--- a/Discover-Bank-Phone/res/layout/faq_landing_page.xml
+++ b/Discover-Bank-Phone/res/layout/faq_landing_page.xml
@@ -1,26 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/forms_inner_padding" 
-    android:background="@drawable/light_gray_bkgrd">
+    android:fillViewport="true" >
 
-    <ListView
-        android:id="@android:id/list"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="1dp"
-        android:layout_marginTop="@dimen/between_related_elements_padding" 
-        android:background="@drawable/rounded_table_corners_no_padding"
-        android:divider="@drawable/table_dotted_line"
-        android:dividerHeight="1px"
-        >
-    </ListView>
+        android:background="@drawable/light_gray_bkgrd"
+        android:padding="@dimen/forms_inner_padding" >
 
-     <com.discover.mobile.bank.ui.widgets.BankLayoutFooter
-        android:id="@+id/bank_footer"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@android:id/list"
-        style="@style/bank_layout_footer_style"/>
-</RelativeLayout>
+        <LinearLayout
+            android:id="@+id/faq_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/between_related_elements_padding"
+            android:background="@drawable/rounded_table_corners_no_padding"
+            android:orientation="vertical"
+            android:padding="1dp" >
+        </LinearLayout>
+
+        <com.discover.mobile.bank.ui.widgets.BankLayoutFooter
+            android:id="@+id/bank_footer"
+            style="@style/bank_layout_footer_style"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/faq_list" />
+    </RelativeLayout>
+
+</ScrollView>
