ID: DE4469 - Help Icon - Have a caret in each subsection to show an action item ID: DE4032 - ATM Locator - Blank screen in ATM Locator if user taps ToU and taps back ID: DE4559 - Pay Bills - Can't access Calendar - CRASH ID: DE4538 - Account Summary and Privacy & Terms - some cosmetic issues
Tested:
- Verified icon used by open account button in account summary is white external icon
- Verified icon used by Deposit action in not eligible screen is white external icon
- Verified icon used by no account summary page is white external icon
- Verified vertical scrollbar in privacy & terms is not overlaid over cells
- Verified Schedule Payment works for successful case
- Verified Schedule Payment use today date if unable to translate earliest payment date provided by Payee detail.
- Verified the right help icon is shown

--- a/Discover-Bank-Phone/res/layout/bank_privacy_terms_layout.xml
+++ b/Discover-Bank-Phone/res/layout/bank_privacy_terms_layout.xml
@@ -3,16 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/light_gray_bkgrd">
-    
-    <ListView
-        android:id="@android:id/list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="1dp"
-        android:layout_marginLeft="@dimen/forms_inner_padding" 
-    	android:layout_marginRight="@dimen/forms_inner_padding" 
-        android:layout_marginTop="@dimen/status_bar_height" 
-        android:background="@drawable/rounded_table_corners_no_padding" />
+   
+	    <ListView
+	        android:id="@android:id/list"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:padding="1dp"
+	        android:scrollbarStyle="outsideInset"
+	        android:layout_marginLeft="@dimen/forms_inner_padding" 
+	    	android:layout_marginRight="@dimen/forms_inner_padding" 
+	        android:layout_marginTop="@dimen/status_bar_height"
+	        android:background="@drawable/privacy_terms_background" />
     
      <com.discover.mobile.common.help.HelpWidget
             android:id="@+id/help"
