--- a/Discover-Bank-Phone/res/layout/bank_privacy_terms_layout.xml
+++ b/Discover-Bank-Phone/res/layout/bank_privacy_terms_layout.xml
@@ -1,23 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/light_gray_bkgrd">
-   
-	    <ListView
-	        android:id="@android:id/list"
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	        android:padding="1dp"
-	        android:scrollbarStyle="outsideInset"
-	        android:layout_marginLeft="@dimen/forms_inner_padding" 
-	    	android:layout_marginRight="@dimen/forms_inner_padding" 
-	        android:layout_marginTop="@dimen/status_bar_height"
-	        android:background="@drawable/privacy_terms_background" />
-    
-     <com.discover.mobile.common.help.HelpWidget
+    android:fillViewport="true" >
+
+    <RelativeLayout
+        android:id="@+id/terms_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/light_gray_bkgrd" >
+
+        <LinearLayout
+            android:id="@+id/terms_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/status_bar_height"
+            android:background="@drawable/rounded_table_corners_no_padding"
+            android:orientation="vertical"
+            android:padding="1dp"
+            android:layout_marginLeft="@dimen/forms_inner_padding" 
+	    	android:layout_marginRight="@dimen/forms_inner_padding" >
+        </LinearLayout>
+
+        <com.discover.mobile.common.help.HelpWidget
             android:id="@+id/help"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-  
-</RelativeLayout>
+    </RelativeLayout>
+
+</ScrollView>
