--- a/Discover-Bank-Phone/res/layout/faq_landing_page.xml
+++ b/Discover-Bank-Phone/res/layout/faq_landing_page.xml
@@ -5,6 +5,7 @@
     android:fillViewport="true" >
 
     <RelativeLayout
+        android:id="@+id/faq_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/light_gray_bkgrd"
