DE4674 - Updated the text field in the account summary drop down so that if there is an amount that is larger than the supported 11 characters, if needed, it will have ellipses added to the end so that it is partially visible in the drop down.

--- a/Discover-Bank-Phone/res/layout/bank_account_activity_header.xml
+++ b/Discover-Bank-Phone/res/layout/bank_account_activity_header.xml
@@ -68,6 +68,8 @@
             android:layout_below="@+id/lable1"
             android:layout_marginRight="@dimen/forms_inner_padding"
             android:layout_toRightOf="@+id/lable2"
+            android:singleLine="true"
+            android:textIsSelectable="false"
             android:gravity="right" />
 
         <TextView
@@ -91,6 +93,8 @@
             android:layout_below="@+id/lable2"
             android:layout_marginRight="@dimen/forms_inner_padding"
             android:layout_toRightOf="@+id/lable3"
+            android:singleLine="true"
+            android:textIsSelectable="false"
             android:gravity="right" />
     </RelativeLayout>
 
