--- a/Discover-Bank-Phone/res/layout/bank_open_account_view.xml
+++ b/Discover-Bank-Phone/res/layout/bank_open_account_view.xml
@@ -1,58 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView 
-    xmlns:android="http://schemas.android.com/apk/res/android" 
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:custom="http://schemas.android.com/apk/res-auto/com.discover.mobile.bank"
     style="@style/default_background"
-    android:fillViewport="true"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:fillViewport="true" >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/forms_inner_padding"
         android:paddingLeft="@dimen/forms_inner_padding"
-   		android:paddingRight="@dimen/forms_inner_padding"
-   		android:paddingBottom="@dimen/forms_inner_padding">        
+        android:paddingRight="@dimen/forms_inner_padding" >
 
         <LinearLayout
-              android:id="@+id/status_bar_layout"
-              android:layout_alignParentTop="true"
-		      android:layout_width="match_parent"
-		      android:layout_height="wrap_content"
-		      android:layout_centerHorizontal="true"
-		      android:layout_marginBottom="@dimen/between_related_elements_padding"
-		      android:orientation="vertical" >
-         	<include layout="@layout/status_bar" />
+            android:id="@+id/status_bar_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="@dimen/between_related_elements_padding"
+            android:orientation="vertical" >
+
+            <include layout="@layout/status_bar" />
         </LinearLayout>
-         
+
         <TextView
-	        android:id="@+id/openAccountDetails"
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content"
-	        android:layout_below="@+id/status_bar_layout"
-	        android:text="@string/bank_open_account_details"
-			style="@style/body_copy_mid"/>
-                 
+            android:id="@+id/openAccountDetails"
+            style="@style/body_copy_mid"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/status_bar_layout"
+            android:text="@string/bank_open_account_details" />
+
         <Button
             android:id="@+id/openAccount"
             style="@style/call_to_action_theme"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
             android:layout_below="@+id/openAccountDetails"
-            android:drawableRight="@drawable/external_link_icon_white"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center"
             android:layout_marginTop="@dimen/modal_footer_topmargin"
             android:drawablePadding="@dimen/between_related_elements_padding"
-            android:layout_gravity="center"
+            android:drawableRight="@drawable/external_link_icon_white"
             android:text="@string/bank_open_account" />
+
+        <com.discover.mobile.common.ui.widgets.AccountToggleView
+            android:id="@+id/acct_toggle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/status_bar" />
 
         <com.discover.mobile.bank.ui.widgets.BankLayoutFooter
             android:id="@+id/bank_footer"
+            style="@style/bank_layout_footer_style"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/openAccount" 
-            style="@style/bank_layout_footer_style"
-            custom:footerType="3"/>
+            android:layout_below="@+id/openAccount"
+            custom:footerType="3" />
     </RelativeLayout>
 
 </ScrollView>
