--- a/Discover-Bank-Phone/res/values/strings_atm_locator.xml
+++ b/Discover-Bank-Phone/res/values/strings_atm_locator.xml
@@ -5,9 +5,8 @@
     <string name="atm_locator_title">ATM Locator</string>
     <string name="atm_location_modal_title">Discover ATM Locator</string>
     <string name="atm_location_modal_content">
-        <![CDATA[This ATM Locator is intended for Discover Bank customers only. 
-					Discover Card customers should visit the <a href="https://www.discover.com/cash-atm-locator/">ATM Locator</a>
-					to search for cash access locations.<br /><br />You will not be charged an ATM surcharge for cash withdrawals at ATMs with orange pins. 
+        <![CDATA[The surcharge-free indicator within this ATM Locator application applies to debit card withdrawals only. Visit the <a href="https://www.discover.com/cash-atm-locator/">ATM Locator</a>
+					on discover.com if you want to locate surcharge-free ATMs for cash advances on your Discover credit card.<br /><br />You will not be charged an ATM surcharge for cash withdrawals at ATMs with orange pins. 
 					For Discover Credit Card cash advances, your cash advance APR and cash advance fee will apply.<br /><br />
 					By clicking the \"Find an ATM\" button, you hereby agree that Discover may access and use your current location
 					information to show you the nearest ATM.]]>  
