--- a/Discover-Commons/res/values/strings_help_menu.xml
+++ b/Discover-Commons/res/values/strings_help_menu.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     
-    <string name="common_help_all_faq">All FAQs ></string>
-    <string name="help_menu_number">1-800-290-9885</string>
-    <string name="help_bank_faq">Bank FAQs ></string>
-    <string name="help_card_faq">Card FAQs ></string>
+    <string name="common_help_all_faq">All FAQs</string>
+    <string name="help_bank_faq">Bank FAQs</string>
+    <string name="help_card_faq">Card FAQs</string>
+    
 </resources>
