DE4782 - Crash With Scheduled Activity DE4846 - App crashes after depositing one check and clicking on deposit another check (Android) (QC# 94798) DE4801 - App Crashes when user toggle to scheduled (Android) (QC# 94604) DE4890 - Payee Details - Phone Number not formatted correctly
Test:
- Verified transfers for all combinations of repeated frequencies works
- Verified all transfers for all combinations are displayed correctly under the scheduled activity table
- Verified application does not crash when transition from posted to scheduled activity list, where the schedule activity list has payments, deposits, and transfer types
- Verified application does not crash after consecutive check deposits
- Verified application does not crash after scheduling a transfer, navigation to schedule activity list rotating phone, and navigating back to transfer confirmation page
- Verified Phone Number is formatted in Payee details as user is typing

--- a/Discover-Bank-Phone/res/values/strings_bank_transfers.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_transfers.xml
@@ -34,6 +34,20 @@
         <item>annually</item>
     </string-array>
     
+    <string-array name="duration_type_strings">
+        <item>Continue Until Cancelled</item>
+        <item>Continue Until A Set End Date</item>
+        <item>Continue Until A Set Number Of Transfers Have Been Made</item>
+        <item>Continue Until A Set Dollar Amount Has Been Transferred</item>
+    </string-array>
+    
+    <string-array name="duration_type">
+        <item>continue_until_cancelled</item>
+        <item>continue_until_a_set_end_date</item>
+        <item>continue_until_a_set_number_of_transfers_have_been_made</item>
+        <item>continue_until_a_set_dollar_amount_has_been_transferred</item>
+    </string-array>
+    
     <string name="external_accounts">External Accounts</string>
     <string name="internal_accounts">Internal Accounts</string>
     
