DE4888: Added code to prevent a pixelated background.

--- a/Discover-Bank-Phone/res/layout/bank_account_summary_view.xml
+++ b/Discover-Bank-Phone/res/layout/bank_account_summary_view.xml
@@ -2,6 +2,7 @@
 <ScrollView 
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:custom="http://schemas.android.com/apk/res-auto/com.discover.mobile.bank"
+    android:id="@+id/background_view"
     style="@style/default_background"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
