DE4967 - Map Icon incorrect on ATM Locator Help (iOS and Android) (QC# 94839)
Tested:
- Verified correct icon is displayed in portrait and landscape
- Verified on baseline and non-baseline

--- a/Discover-Bank-Phone/res/layout/bank_atm_modal_top.xml
+++ b/Discover-Bank-Phone/res/layout/bank_atm_modal_top.xml
@@ -23,8 +23,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/modal_alert_title"
-            android:paddingTop="@dimen/atm_modal_icon_padding"
-            android:src="@drawable/atm_map_icon_sm" />
+            android:paddingTop="5dp"
+            android:paddingLeft="7dp"
+            android:src="@drawable/atm_pinview_icon_sm" />
 
         <TextView
             android:id="@+id/map_title"
