US8347: Added Links to the code.

--- a/Discover-Card-Phone/res/values/strings_card_travel_faq.xml
+++ b/Discover-Card-Phone/res/values/strings_card_travel_faq.xml
@@ -30,10 +30,10 @@
     <string name="card_travel_title_two">What benefits are included with 24/7 Travel Assistance? </string>
     <string name="card_travel_content_two">
         <![CDATA[<b>Lost Luggage Tracking:</b> We will help you locate lost luggage by staying in touch with your airline or other carrier, and provide regular status updates until your luggage is found.
-		\n<b>Emergency Cash Transfer:</b> We will help you find the most easily obtainable funds and can locate ATMs and financial service institutions, or arrange to have cash wired or delivered while traveling.
-		\n<b>Passport and Travel Document Replacement:</b> If your passport, identity cards or other papers necessary to return home are lost or stolen, our provider will offer assistance to replace them.
-		\n<b>Flight Rebooking/Ticket Replacement:</b> If your tickets home are lost or stolen, or if illness or other emergency requires changing travel arrangements, our provider offers assistance replacing or rebooking your tickets.\n 
-		\nLog into Discover.com to view all your travel benefits.]]>
+		<br/><b>Emergency Cash Transfer:</b> We will help you find the most easily obtainable funds and can locate ATMs and financial service institutions, or arrange to have cash wired or delivered while traveling.
+		<br/><b>Passport and Travel Document Replacement:</b> If your passport, identity cards or other papers necessary to return home are lost or stolen, our provider will offer assistance to replace them.
+		<br/><b>Flight Rebooking/Ticket Replacement:</b> If your tickets home are lost or stolen, or if illness or other emergency requires changing travel arrangements, our provider offers assistance replacing or rebooking your tickets.\n 
+		<br/><br/>Log into Discover.com to view all your travel benefits.]]>
     </string>
     
     <string name="card_travel_title_three">Where is my Discover card accepted outside of the U.S.?</string>
