--- a/Discover-Commons/res/layout/navigation_menu_sub_section_item.xml
+++ b/Discover-Commons/res/layout/navigation_menu_sub_section_item.xml
@@ -23,6 +23,7 @@
             android:layout_height="@dimen/nav_section_height"
             android:layout_centerVertical="true"
             android:paddingLeft="@dimen/nav_image_padding"
+            android:layout_toRightOf="@+id/title"
             android:src="@drawable/external_link_icon" />
 
         <TextView
