--- a/Discover-Bank-Phone/res/layout/adjusted_formatted_amount_list_item.xml
+++ b/Discover-Bank-Phone/res/layout/adjusted_formatted_amount_list_item.xml
@@ -51,9 +51,10 @@
         android:id="@+id/amount_error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true"
         android:layout_below="@id/amount_llayout"
         android:layout_marginRight="@dimen/forms_inner_padding"
+        android:layout_marginLeft="@dimen/forms_inner_padding"
         android:paddingBottom="@dimen/forms_inner_padding"
         android:text="@string/edit"
         android:textColor="@color/error_indicator"
