--- a/Discover-Bank-Phone/res/layout/bank_privacy_terms_layout.xml
+++ b/Discover-Bank-Phone/res/layout/bank_privacy_terms_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:custom="http://schemas.android.com/apk/res-auto/com.discover.mobile.bank"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true" >
@@ -26,6 +27,15 @@
             android:id="@+id/help"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+        
+        <com.discover.mobile.bank.ui.widgets.BankLayoutFooter
+            android:id="@+id/bank_footer"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/terms_list" 
+            style="@style/bank_layout_footer_style"
+            custom:footerType="2"
+            android:visibility="gone"/>
     </RelativeLayout>
 
 </ScrollView>
